--- a/frontend/bruinsplit/src/pages/pages.css
+++ b/frontend/bruinsplit/src/pages/pages.css
@@ -1,3 +1,15 @@
-* {
+.page-container{
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
     align-content: center;
 }
+
+.card-grid {
+  display: grid;
+  
+  grid-template-columns: repeat(auto-fit, 20rem);
+  
+  gap: 1rem;
+  justify-content: center;
+}   
